c/examples/writing-a-c-compiler-tests/tests/chapter_11/invalid_parse/invalid_cast.c
int main(void) {
    /* A cast expression can only contain type specifiers,
     * not storage class specifiers
     */
    return (static int) 10;
}